fixing entities and repositeries